<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_layout_of_task_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white">

    <RelativeLayout
        android:id="@+id/parent_relative_layout_of_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/cardview_style"
        android:backgroundTint="@color/background_of_items"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">


        <TextView
            android:id="@+id/txt_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:layout_marginTop="25dp"
            android:maxWidth="250dp"
            android:background="@drawable/line"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_task_name"
            android:textColor="@color/black"
            android:textSize="18dp" />



        <RelativeLayout
            android:id="@+id/relative_layput_time_and_clock_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_task_name"
            android:layout_alignStart="@+id/txt_task_name"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/img_view_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_alarm" />

            <TextView
                android:id="@+id/txt_time_of_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/img_view_clock"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/time_of_the_task"
                android:textColor="@color/txt_time_of_task_color"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/txt_view_date_of_task_in_RV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/txt_time_of_task"
                android:fontFamily="@font/poppins_medium"
                android:text="25-10-2022"
                android:textColor="@color/txt_time_of_task_color"
                android:textSize="12dp" />
        </RelativeLayout>




        <ImageView
            android:id="@+id/img_view_check_box_oval_not_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="44dp"
            android:layout_marginRight="25dp"
            android:visibility="gone"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_check_box_oval_not_checked" />

        <ImageView
            android:id="@+id/img_view_check_box_oval_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="44dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/ic_check_box_oval"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_description_of_task"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_layput_time_and_clock_img"
            android:layout_alignStart="@+id/relative_layput_time_and_clock_img"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/description_of_the_task"
            android:textColor="@color/txt_task_description_color"
            android:textSize="14dp" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>