<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:background="@color/white"
    android:paddingRight="20dp"
    android:paddingBottom="70dp"
    tools:context=".Add_task">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/create_a_task"
            android:textColor="#1D1235"
            android:textSize="30dp" />


    </RelativeLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.09" />

    <TextView
        android:id="@+id/task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/task_title"
        android:textColor="#1D1235"
        android:textSize="17dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/add_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_task_items_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/edittext_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="#858585"
        android:textSize="16dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1" />


    <TextView
        android:id="@+id/task_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/task_type"
        android:textColor="#1D1235"
        android:textSize="17dp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/creat_task_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="64dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1" />


    <TextView
        android:id="@+id/choose_date_and_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/choose_date_and_time"
        android:textColor="#1D1235"
        android:textSize="17dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/select_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/about_user_items_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:src="@drawable/ic_calendar3svg" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.2"
                android:id="@+id/select_date_text"

                android:fontFamily="@font/poppins_semibold"
                android:text="Select a Date"
                android:textColor="#1D1235" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <LinearLayout
            android:id="@+id/select_time_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/about_user_items_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:src="@drawable/ic_clock" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.2"
                android:id="@+id/select_time_text"
                android:fontFamily="@font/poppins_semibold"
                android:text="Select a Time"
                android:textColor="#1D1235" />
        </LinearLayout>


    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/get_alert_for_this_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/get_alert_for_this_task"
            android:textColor="#1D1235"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/parent_layout"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dp"
            android:layout_marginTop="-3dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                android:id="@+id/On_relalive_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/card_on_back">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:fontFamily="@font/prima_sans_bold_bt"
                    android:paddingLeft="7dp"
                    android:paddingBottom="5dp"
                    android:text="On"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@color/white" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Off_relalive_layout"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:background="@drawable/card_off_back"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:fontFamily="@font/prima_sans_bold_bt"
                    android:paddingRight="7dp"
                    android:paddingBottom="5dp"
                    android:text="Off"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="7dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@color/black" />

            </RelativeLayout>
        </RelativeLayout>


    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.08" />

    <RelativeLayout
        android:id="@+id/task_done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/done_creating_task_button_back"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="Done"
            android:textColor="#1D1235"
            android:textSize="18dp" />
    </RelativeLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.08" />

</LinearLayout>
